--- a/0.3/time/slideshow1.html
+++ b/0.3/time/slideshow1.html
@@ -98,34 +98,34 @@
         <a class="activate-button">Activate</a>
         <a class="download-button" href="slideshow1.js" download>Download</a>
     </div>
-    <div class="editor">define([&quot;pipAPI&quot;], function(APIconstructor) {
+    <div class="editor">define([&apos;pipAPI&apos;], function(APIconstructor) {
 
 	var API = new APIconstructor();
 
 
 	API.addSequence([
 		{
-			input: [{handle:&quot;space&quot;,on:&quot;space&quot;}],
-			layout: [{media :{word:&quot;Is\&quot;nt&quot;}}],
+			input: [{handle:&apos;space&apos;,on:&apos;space&apos;}],
+			layout: [{media :{word:&apos;Is\&apos;nt&apos;}}],
 			interactions: [{
-				conditions: [{type:&quot;inputEquals&quot;,value:&quot;space&quot;}],
-				actions: [{type:&quot;endTrial&quot;}]
+				conditions: [{type:&apos;inputEquals&apos;,value:&apos;space&apos;}],
+				actions: [{type:&apos;endTrial&apos;}]
 			}]
 		},
 		{
-			input: [{handle:&quot;space&quot;,on:&quot;space&quot;}],
-			layout: [{media :{word:&quot;this&quot;}}],
+			input: [{handle:&apos;space&apos;,on:&apos;space&apos;}],
+			layout: [{media :{word:&apos;this&apos;}}],
 			interactions: [{
-				conditions: [{type:&quot;inputEquals&quot;,value:&quot;space&quot;}],
-				actions: [{type:&quot;endTrial&quot;}]
+				conditions: [{type:&apos;inputEquals&apos;,value:&apos;space&apos;}],
+				actions: [{type:&apos;endTrial&apos;}]
 			}]
 		},
 		{
-			input: [{handle:&quot;space&quot;,on:&quot;space&quot;}],
-			layout: [{media :{word:&quot;cool?&quot;}}],
+			input: [{handle:&apos;space&apos;,on:&apos;space&apos;}],
+			layout: [{media :{word:&apos;cool?&apos;}}],
 			interactions: [{
-				conditions: [{type:&quot;inputEquals&quot;,value:&quot;space&quot;}],
-				actions: [{type:&quot;endTrial&quot;}]
+				conditions: [{type:&apos;inputEquals&apos;,value:&apos;space&apos;}],
+				actions: [{type:&apos;endTrial&apos;}]
 			}]
 		}
 	]);
