fix(examples): fixed urls

--- a/0.3/time/amp.html
+++ b/0.3/time/amp.html
@@ -178,7 +178,7 @@ define([&apos;pipAPI&apos;], function(APIconstructor) {
 	});
 	// from where to take the images
 	API.addSettings(&apos;base_url&apos;,{
-		image : &apos;../../images&apos;
+		image : &apos;/images&apos;
 	});
 
 	API.addSettings(&apos;logger&apos;,{
@@ -831,7 +831,8 @@ define([&apos;pipAPI&apos;], function(APIconstructor) {
 	]); // end sequence
 
 	return API.script;
-});</div>
+});
+</div>
 </section>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.6/ace.js" integrity="sha256-xrr4HH5eSY+cFz4SH7ja/LaAi9qcEdjMpeMP49/iOLs=" crossorigin="anonymous"></script>
 <script src="../assets/playground.js"></script>
