--- a/0.3/time/biat.html
+++ b/0.3/time/biat.html
@@ -124,8 +124,8 @@ define([&apos;pipAPI&apos;,&apos;pipScorer&apos;], function(APIConstructor,Score
 
 	// Set URLs for images and templates
 	API.addSettings(&apos;base_url&apos;,{
-		image : &apos;../../images&apos;,
-		template : &apos;../../../resources/BIAT&apos;
+		image : &apos;/images&apos;,
+		template : &apos;/resources/BIAT&apos;
 	});
 
 	// Logging URL
@@ -1044,7 +1044,8 @@ define([&apos;pipAPI&apos;,&apos;pipScorer&apos;], function(APIConstructor,Score
 	});
 
 	return API.script;
-});</div>
+});
+</div>
 </section>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.6/ace.js" integrity="sha256-xrr4HH5eSY+cFz4SH7ja/LaAi9qcEdjMpeMP49/iOLs=" crossorigin="anonymous"></script>
 <script src="../assets/playground.js"></script>
