--- a/0.3/time/st-iat.html
+++ b/0.3/time/st-iat.html
@@ -132,7 +132,7 @@
 	});
 
 	API.addSettings(&apos;base_url&apos;,{
-		image : &apos;../../images&apos;
+		image : &apos;/images&apos;
 	});
 
 	API.addSettings(&apos;logger&apos;,{
@@ -606,7 +606,8 @@
 	]);
 
 	return API.script;
-});</div>
+});
+</div>
 </section>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.6/ace.js" integrity="sha256-xrr4HH5eSY+cFz4SH7ja/LaAi9qcEdjMpeMP49/iOLs=" crossorigin="anonymous"></script>
 <script src="../assets/playground.js"></script>
