--- a/0.3/time/evaluative_priming2.html
+++ b/0.3/time/evaluative_priming2.html
@@ -117,7 +117,7 @@
 	});
 
 	API.addSettings(&apos;base_url&apos;,{
-		image : &apos;../../images&apos;
+		image : &apos;/images&apos;
 	});
 
 
@@ -782,7 +782,8 @@
 	]);
 
 	return API.script;
-});</div>
+});
+</div>
 </section>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.6/ace.js" integrity="sha256-xrr4HH5eSY+cFz4SH7ja/LaAi9qcEdjMpeMP49/iOLs=" crossorigin="anonymous"></script>
 <script src="../assets/playground.js"></script>
