--- a/0.3/time/gnat.html
+++ b/0.3/time/gnat.html
@@ -121,8 +121,8 @@
 	});
 
 	API.addSettings(&apos;base_url&apos;,{
-		image : &apos;../../images&apos;,
-		template : &apos;../../../resources/GNAT&apos;
+		image : &apos;/images&apos;,
+		template : &apos;/resources/GNAT&apos;
 	});
 
 
@@ -1198,7 +1198,8 @@
 	]);
 
 	return API.script;
-});</div>
+});
+</div>
 </section>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.6/ace.js" integrity="sha256-xrr4HH5eSY+cFz4SH7ja/LaAi9qcEdjMpeMP49/iOLs=" crossorigin="anonymous"></script>
 <script src="../assets/playground.js"></script>
