fix(examples): fixed urls

--- a/0.3/time/amp.html
+++ b/0.3/time/amp.html
@@ -178,7 +178,7 @@ define([&apos;pipAPI&apos;], function(APIconstructor) {
 	});
 	// from where to take the images
 	API.addSettings(&apos;base_url&apos;,{
-		image : &apos;/images&apos;
+		image : &apos;/minno-time/images&apos;
 	});
 
 	API.addSettings(&apos;logger&apos;,{
