--- a/0.3/time/biat.html
+++ b/0.3/time/biat.html
@@ -124,8 +124,8 @@ define([&apos;pipAPI&apos;,&apos;pipScorer&apos;], function(APIConstructor,Score
 
 	// Set URLs for images and templates
 	API.addSettings(&apos;base_url&apos;,{
-		image : &apos;/images&apos;,
-		template : &apos;/resources/BIAT&apos;
+		image : &apos;/minno-time/images&apos;,
+		template : &apos;/minno-time/resources/BIAT&apos;
 	});
 
 	// Logging URL
