--- a/0.3/time/gnat.html
+++ b/0.3/time/gnat.html
@@ -121,8 +121,8 @@
 	});
 
 	API.addSettings(&apos;base_url&apos;,{
-		image : &apos;/images&apos;,
-		template : &apos;/resources/GNAT&apos;
+		image : &apos;/minno-time/images&apos;,
+		template : &apos;/minno-time/resources/GNAT&apos;
 	});
 
 
