--- a/0.3/time/iat.html
+++ b/0.3/time/iat.html
@@ -125,8 +125,8 @@
 
     // setting the base urls for images and templates
     API.addSettings(&apos;base_url&apos;,{
-        image : &apos;/images&apos;,
-        template : &apos;/resources/IAT&apos;
+        image : &apos;/minno-time/images&apos;,
+        template : &apos;/minno-time/resources/IAT&apos;
     });
 
     // setting the way the logger works (how often we send data to the server and the url for the data)
