--- a/0.3/time/spf.html
+++ b/0.3/time/spf.html
@@ -119,7 +119,7 @@
 	});
 
 	API.addSettings(&apos;base_url&apos;,{
-		image : &apos;/images&apos;
+		image : &apos;/minno-time/images&apos;
 	});
 
 
