--- a/0.3/time/st-iat.html
+++ b/0.3/time/st-iat.html
@@ -132,7 +132,7 @@
 	});
 
 	API.addSettings(&apos;base_url&apos;,{
-		image : &apos;/images&apos;
+		image : &apos;/minno-time/images&apos;
 	});
 
 	API.addSettings(&apos;logger&apos;,{
