--- a/0.3/time/evaluative_priming.html
+++ b/0.3/time/evaluative_priming.html
@@ -119,7 +119,7 @@
 
 	//the source of the images
 	API.addSettings(&apos;base_url&apos;,{
-		image : &apos;/images&apos;
+		image : &apos;/minno-time/images&apos;
 	});
 
 	API.addSettings(&apos;logger&apos;,{
