--- a/0.3/time/evaluative_priming2.html
+++ b/0.3/time/evaluative_priming2.html
@@ -117,7 +117,7 @@
 	});
 
 	API.addSettings(&apos;base_url&apos;,{
-		image : &apos;/images&apos;
+		image : &apos;/minno-time/images&apos;
 	});
 
 
