chore(*): fixed typo

--- a/0.3/time/API.html
+++ b/0.3/time/API.html
@@ -58,7 +58,7 @@
 </ul>
 </li>
 <li><a href="#inheritance">Inheritance</a></li>
-<li><a href="#logging">Loggin</a></li>
+<li><a href="#logging">Logging</a></li>
 </ul>
 </li>
 <li><a href="scorer.html">Scorer</a></li>
