--- a/0.3/time/settings.html
+++ b/0.3/time/settings.html
@@ -19,6 +19,20 @@
 					<a href="/minno-time/0.3/time/overview.html">miTime</a>
 				</nav>
 				<nav>
+                    <div id="search-box">
+                        <script>
+                            (function() {
+                                var cx = '002953266509769041597:smg5beek-iu';
+                                var gcse = document.createElement('script');
+                                gcse.type = 'text/javascript';
+                                gcse.async = true;
+                                gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+                                var s = document.getElementsByTagName('script')[0];
+                                s.parentNode.insertBefore(gcse, s);
+                            })();
+                        </script>
+                        <gcse:searchbox-only></gcse:searchbox-only>
+                    </div>
                     <select id="version-select"><option value="0.3" selected>v0.3</option>,<option value="0.4" >v0.4</option></select>
 					<a href="https://github.com/minnojs">Github</a>
 				</nav>
@@ -97,10 +111,10 @@
 // Adding setting is accumulative. this means that adding a specific setting twice merges it in, and does not reset it to its defaults. &lt;/br&gt;
 // The basic structure of the add settings object is as follows:
 
-//			API.addSettings(&quot;settingName&quot;,{
+//			API.addSettings(&apos;settingName&apos;,{
 //				// some settings
 //			});
-define([&quot;pipAPI&quot;], function(APIconstructor) {
+define([&apos;pipAPI&apos;], function(APIconstructor) {
 
 	var API = new APIconstructor();
 
@@ -109,7 +123,7 @@ define([&quot;pipAPI&quot;], function(APIconstructor) {
 	// The canvas setting controls the general look that the player takes
 	/* canvas */
 	// ##### controling shape
-	API.addSettings(&quot;canvas&quot;,{
+	API.addSettings(&apos;canvas&apos;,{
 
 		// `maxWidth` the maximum width (in pixels) that the canvas may reach. By default it is set to 500px.
 		maxWidth: 800,
@@ -119,17 +133,17 @@ define([&quot;pipAPI&quot;], function(APIconstructor) {
 		// ##### controling design
 		,
 		// `background` controls the background color of the whole screen
-		background: &quot;violet&quot;,
+		background: &apos;violet&apos;,
 		// `canvasBackground` controls the background color of the player canvas
-		canvasBackground: &quot;lightblue&quot;,
+		canvasBackground: &apos;lightblue&apos;,
 		// `borderWidth` controls the width of the player canvas borders in pixels
 		borderWidth: 4,
 		// `borderColor` controls the color of the player canvas borders
-		borderColor: &quot;black&quot;,
+		borderColor: &apos;black&apos;,
 		// `css` allows you to add your custom css to the canvas element (using the jQuery css API).
 		// This is an advanced way to affect the way your task looks globaly.
 		css: {
-			color:&quot;tomato&quot;
+			color:&apos;tomato&apos;
 		}
 	});
 
@@ -138,8 +152,8 @@ define([&quot;pipAPI&quot;], function(APIconstructor) {
 	// See documentation if you want to add a custom logger function to replace the default logging action of the player.
 	/* Logger */
 	// `url` is the url to which we send the logged data (ask your IT team what it should be). You should set this if you want to log your data...
-	API.addSettings(&quot;logger&quot;,{
-		url: &quot;my.domain.org/controler.php&quot;,
+	API.addSettings(&apos;logger&apos;,{
+		url: &apos;my.domain.org/controler.php&apos;,
 		// `pulse` the maximum size of each data pulse to the server (see documentation for more details).
 		// In this case we post to the server every 20 logs.
 		pulse: 20,
@@ -151,13 +165,13 @@ define([&quot;pipAPI&quot;], function(APIconstructor) {
 	// The base url section is responsible for loading images and templates. it allows the user to pick a base url from which to load all images and templates. &lt;/br&gt;
 	/* base url */
 	// You can input a single url for use for both images and template.
-	API.addSettings(&quot;base_url&quot;,&quot;media&quot;);
+	API.addSettings(&apos;base_url&apos;,&apos;media&apos;);
 	// Or an object with seperate paths for templates and images.
-	API.addSettings(&quot;base_url&quot;,{
+	API.addSettings(&apos;base_url&apos;,{
 		// `image`: the path to your images
-		image: &quot;media/images&quot;,
+		image: &apos;media/images&apos;,
 		// `template`: the path to your templates
-		template: &quot;media/templates&quot;
+		template: &apos;media/templates&apos;
 	});
 
 	// ### Redirect
@@ -165,27 +179,27 @@ define([&quot;pipAPI&quot;], function(APIconstructor) {
 	// The redirect setting decides where to redirect the player at the end of the task.
 	// By default, the player simply refreshes the current page.
 	// This option is not used if the endTask hook is set.
-	API.addSettings(&quot;redirect&quot;,&quot;my.domain.org/next/&quot;);
+	API.addSettings(&apos;redirect&apos;,&apos;my.domain.org/next/&apos;);
 
 	// ### Meta data
 	/* Meta data */
 	// Meta data is server side data that should be returned with every request to the server.
 	// Any key value pair in the meta data is added to every post the player makes to the server.
 	// In order to create a post with three keys: json, session_id and task_id - you would write something like this:
-	API.addSettings(&quot;metaData&quot;, {
+	API.addSettings(&apos;metaData&apos;, {
 		session_id	: 9872356,
-		task_id		: &quot;43BTW78&quot;
+		task_id		: &apos;43BTW78&apos;
 	});
 
 	// ### sequence
 	API.addSequence([
 		{
-			input: [{handle:&quot;end&quot;, on:&quot;space&quot;}],
-			layout:[{media:{word:&quot;Just a plain trial to show what we can do with settings&quot;}}],
+			input: [{handle:&apos;end&apos;, on:&apos;space&apos;}],
+			layout:[{media:{word:&apos;Just a plain trial to show what we can do with settings&apos;}}],
 			interactions: [
 				{
-					conditions: [{type:&quot;inputEquals&quot;,value:&quot;end&quot;}],
-					actions: [{type:&quot;endTrial&quot;}]
+					conditions: [{type:&apos;inputEquals&apos;,value:&apos;end&apos;}],
+					actions: [{type:&apos;endTrial&apos;}]
 				}
 			]
 		}
