--- a/0.3/time/stimulus.html
+++ b/0.3/time/stimulus.html
@@ -19,6 +19,20 @@
 					<a href="/minno-time/0.3/time/overview.html">miTime</a>
 				</nav>
 				<nav>
+                    <div id="search-box">
+                        <script>
+                            (function() {
+                                var cx = '002953266509769041597:smg5beek-iu';
+                                var gcse = document.createElement('script');
+                                gcse.type = 'text/javascript';
+                                gcse.async = true;
+                                gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+                                var s = document.getElementsByTagName('script')[0];
+                                s.parentNode.insertBefore(gcse, s);
+                            })();
+                        </script>
+                        <gcse:searchbox-only></gcse:searchbox-only>
+                    </div>
                     <select id="version-select"><option value="0.3" selected>v0.3</option>,<option value="0.4" >v0.4</option></select>
 					<a href="https://github.com/minnojs">Github</a>
 				</nav>
@@ -88,7 +102,7 @@
     </div>
     <div class="editor">// You can find the images used for this task [here](https://github.com/minnojs/minno-time/tree/gh-pages/images)
 // and the templates [here](https://github.com/minnojs/minno-time/tree/gh-pages/resources).
-define([&quot;pipAPI&quot;], function(APIconstructor) {
+define([&apos;pipAPI&apos;], function(APIconstructor) {
 
     var API = new APIconstructor();
 
@@ -100,7 +114,7 @@ define([&quot;pipAPI&quot;], function(APIconstructor) {
         /* The trial begins here */
         {
             input: [
-                {handle:&quot;space&quot;,on:&quot;space&quot;}
+                {handle:&apos;space&apos;,on:&apos;space&apos;}
             ],
 
             // The layout property is an array of the static stimuli in the trial
@@ -108,16 +122,16 @@ define([&quot;pipAPI&quot;], function(APIconstructor) {
                 /* the top right stimulus begins here */
                 {
                     // The **location** property of the stimulus controls where the stimulus will appear. &lt;/br&gt;
-                    // Permitted values are numbers (percentages of canvas size), &quot;center&quot; or &quot;auto&quot;. By default, location is set to center.
+                    // Permitted values are numbers (percentages of canvas size), &apos;center&apos; or &apos;auto&apos;. By default, location is set to center.
                     location:{right:0,top:0},
 
                     // The **css** property of the stimulus controls the styling of displayed elements
                     // it uses the jquery property name standard (http://api.jquery.com/css/)
-                    css: {color:&quot;red&quot;,fontSize:&quot;2em&quot;},
+                    css: {color:&apos;red&apos;,fontSize:&apos;2em&apos;},
 
                     // The **media** property of the stimulus controls what it is that we are about to display.
                     // the simplest form of media is a **word**, or string of text
-                    media:{word:&quot;top right (word)&quot;}
+                    media:{word:&apos;top right (word)&apos;}
                 },
                 /* the top right stimulus ends here */
 
@@ -126,7 +140,7 @@ define([&quot;pipAPI&quot;], function(APIconstructor) {
                 /* the top left stimulus begins here */
                 {
                     location:{left:0,top:0},
-                    media:{html:&quot;&lt;b&gt;bottom left (html)&lt;/b&gt;&quot;}
+                    media:{html:&apos;&lt;b&gt;bottom left (html)&lt;/b&gt;&apos;}
                 },
                 /* the top left stimulus begins here */
 
@@ -135,7 +149,7 @@ define([&quot;pipAPI&quot;], function(APIconstructor) {
                 /* the bottom left stimulus begins here */
                 {
                     location:{left:0,bottom:0},
-                    media:{template:&quot;../../../resources/bottom_left.html&quot;}
+                    media:{template:&apos;../../../resources/bottom_left.html&apos;}
                 }
                 /* the bottom left stimulus begins here */
 
@@ -144,10 +158,10 @@ define([&quot;pipAPI&quot;], function(APIconstructor) {
             // The stimuli property holds stimuli that are to be dynamically presented
             stimuli: [
                 // Lets show an **image** this time. &lt;/br&gt;
-                // The size property allows you to control the image size (in percentage of canvas). By default it is set to &quot;auto&quot;.
+                // The size property allows you to control the image size (in percentage of canvas). By default it is set to &apos;auto&apos;.
                 {
-                    size: {height:75, width:&quot;auto&quot;},
-                    media :{image:&quot;../../images/learning.jpg&quot;},
+                    size: {height:75, width:&apos;auto&apos;},
+                    media :{image:&apos;../../images/learning.jpg&apos;},
                     // `nolog` allows you to control whether this stimulus will be logged (see the interactions section)
                     nolog:true
                 }
@@ -155,13 +169,13 @@ define([&quot;pipAPI&quot;], function(APIconstructor) {
 
             interactions: [
                 {
-                    conditions: [{type:&quot;begin&quot;}],
-                    actions: [{type:&quot;showStim&quot;,handle:&quot;All&quot;}]
+                    conditions: [{type:&apos;begin&apos;}],
+                    actions: [{type:&apos;showStim&apos;,handle:&apos;All&apos;}]
                 },
 
                 {
-                    conditions: [{type:&quot;inputEquals&quot;,value:&quot;space&quot;}],
-                    actions: [{type:&quot;endTrial&quot;}]
+                    conditions: [{type:&apos;inputEquals&apos;,value:&apos;space&apos;}],
+                    actions: [{type:&apos;endTrial&apos;}]
                 }
             ]
         }
@@ -172,7 +186,7 @@ define([&quot;pipAPI&quot;], function(APIconstructor) {
 
     return API.script;
 });
-/* don&quot;t forget to close the require wrapper */
+/* don&apos;t forget to close the require wrapper */
 </div>
 </section>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.6/ace.js" integrity="sha256-xrr4HH5eSY+cFz4SH7ja/LaAi9qcEdjMpeMP49/iOLs=" crossorigin="anonymous"></script>
