--- a/0.4/time/API.html
+++ b/0.4/time/API.html
@@ -452,9 +452,15 @@ Remove input listener, takes an input <code>handle</code> or an array of input h
 <li><code>{type:&#39;removeInput&#39;,handle : &#39;All&#39;}</code></li>
 </ul>
 <p><strong>resetTimer</strong>:
-Resets trial timer. The latency of any events from here on (including the current one) will be calculated back to the reset instead of the begining of the trial.</p>
+Resets trial timer. 
+The latency of any events from here on (including the current one) will be calculated back to the reset instead of the begining of the trial.
+By default, reseting the timer synchronizes it with the upcomming screen paint.
+This setup ensures that we measure from the time that stimuli are actually displayed and not from when the command is issued.
+In order to cancel this behaviour, you may set the  <code>immidiate</code> property.
+This is critical in cases that you want to synchronize the timer with a user action as opposed to a visual stimulus.</p>
 <ul>
 <li><code>{type:&#39;resetTimer&#39;}</code></li>
+<li><code>{type:&#39;resetTimer&#39;, immediate:true}</code></li>
 </ul>
 <p><strong>endTrial</strong>:
 *Speaks for itself (note that any actions that come after this is called may not work properly).</p>
